--- a/decidim-core/app/packs/stylesheets/decidim/_redesigned_item_list.scss
+++ b/decidim-core/app/packs/stylesheets/decidim/_redesigned_item_list.scss
@@ -6,7 +6,7 @@
   }
 
   &__title{
-    @apply h4 text-secondary;
+    @apply h4 text-secondary focus-visible:outline-none focus-visible:underline;
   }
 
   &__image{
