--- a/decidim-conferences/app/packs/stylesheets/decidim/conferences/_media.scss
+++ b/decidim-conferences/app/packs/stylesheets/decidim/conferences/_media.scss
@@ -12,11 +12,11 @@
   }
 
   &-grid{
-    @apply mt-10 grid grid-cols-2 md:grid-cols-5 gap-x-4 gap-y-10 md:gap-12;
+    @apply mt-10 grid grid-cols-2 md:grid-cols-5 gap-x-4 gap-y-10 md:gap-12 place-items-start;
   }
 
   &-photo{
-    @apply cursor-pointer;
+    @apply cursor-pointer text-left focus-visible:outline-none;
 
     &__img{
       @apply border-4 border-background rounded overflow-hidden aspect-[4/3];
@@ -34,11 +34,13 @@
       @apply mt-2 text-gray-2 text-sm;
     }
 
-    &:hover &__img{
+    &:hover &__img,
+    &:focus &__img{
       @apply border-tertiary;
     }
 
-    &:hover &__title{
+    &:hover &__title,
+    &:focus &__title{
       @apply underline;
     }
   }
