--- a/decidim-conferences/app/views/decidim/conferences/conferences/show.html.erb
+++ b/decidim-conferences/app/views/decidim/conferences/conferences/show.html.erb
@@ -27,7 +27,7 @@ edit_link(
         <%= icon "arrow-down-s-line" %>
         <%= icon "arrow-up-s-line" %>
       </button>
-      <ul id="dropdown-menu" class="conference__nav">
+      <ul id="dropdown-menu" class="conference__nav" aria-hidden="true">
         <%= render partial: "layouts/decidim/conferences/conference_nav_item", collection: conference_nav_items, as: :item %>
       </ul>
     </div>
