avoid foundation [data-open] throws error

--- a/decidim-core/app/views/decidim/application/_collection.html.erb
+++ b/decidim-core/app/views/decidim/application/_collection.html.erb
@@ -1,5 +1,5 @@
 <% unless attachment_collection.unused? %>
-<button id="dropdown-documents-trigger-<%= attachment_collection.id %>" class="documents__collection-trigger" data-component="dropdown" data-target="dropdown-menu-documents-<%= attachment_collection.id %>" data-open="false" aria-expanded="false">
+<button id="dropdown-documents-trigger-<%= attachment_collection.id %>" class="documents__collection-trigger" data-component="dropdown" data-target="dropdown-menu-documents-<%= attachment_collection.id %>" aria-expanded="false">
   <span>
     <span class="documents__collection-trigger__icon">
       <%= icon "folder-line" %>
