--- a/decidim-core/app/views/decidim/shared/filters/_dropdown_label.html.erb
+++ b/decidim-core/app/views/decidim/shared/filters/_dropdown_label.html.erb
@@ -1,4 +1,5 @@
 <% leaf = item.tree_node? ? item.leaf : item %>
+<% data_checkboxes_tree_id = [check_boxes_tree_id, leaf.value].join("-") %>
 <%- check_box_label = capture do %>
   <div class="filter">
     <%= leaf.label %>
@@ -17,7 +18,7 @@
         check_box_label,
         class: "reset-defaults",
         hidden: "hidden",
-        data: { checkboxes_tree: [check_boxes_tree_id, leaf.value].join("-") },
+        data: { checkboxes_tree: data_checkboxes_tree_id },
         is_root_check_box: leaf.value.blank?
       ),
       leaf.value.to_s,
