--- a/decidim-verifications/app/views/decidim/verifications/authorizations/_item.html.erb
+++ b/decidim-verifications/app/views/decidim/verifications/authorizations/_item.html.erb
@@ -16,12 +16,12 @@
 <% end %>
 
 <% if local_assigns[:url].present? %>
-  <a data-verification href="<%= url %>" class="verification" title="<%= button_text %>">
+  <a href="<%= url %>" class="verification" title="<%= button_text %>" data-verification>
     <%= verification %>
   </a>
 <% else %>
-  <%= content_tag redesign_enabled? ? :div : :button, class: "verification", data_modal_open_key => "renew-modal", data_modal_remote_key => remote_url, data: { verification: "" } do %>
+  <div class="verification" data-verification data-dialog-open="renew-modal" data-dialog-remote-url="<%= remote_url %>">
     <%= verification %>
-  <% end %>
+  </div>
   <%= decidim_modal id: "renew-modal", class:"verification-modal", remote: true if remote_url %>
 <% end %>
