--- a/decidim-core/app/packs/stylesheets/decidim/_redesigned_cards.scss
+++ b/decidim-core/app/packs/stylesheets/decidim/_redesigned_cards.scss
@@ -64,15 +64,15 @@
   &__list{
     @apply flex flex-col md:flex-row gap-2.5 md:gap-4 px-4 rounded overflow-hidden border-l-4 border-background hover:border-tertiary;
 
-    &__content{
+    &-content{
       @apply flex flex-col gap-2.5;
     }
 
-    &__title{
+    &-title{
       @apply h4 text-secondary focus-visible:outline-none focus-visible:underline;
     }
 
-    &__image{
+    &-image{
       @apply w-1/4 flex-none rounded overflow-hidden aspect-[1.5] -ml-[calc(1rem+4px)];
 
       img{
@@ -80,11 +80,11 @@
       }
     }
 
-    &__text{
+    &-text{
       @apply text-gray-2;
     }
 
-    &__metadata{
+    &-metadata{
       @apply mt-auto inline-flex flex-wrap gap-x-4 md:gap-0;
 
       & > span{
@@ -100,7 +100,7 @@
       @apply mt-6;
     }
 
-    &:hover &__title{
+    &:hover &-title{
       @apply underline;
     }
   }
