--- a/decidim-core/app/views/decidim/application/_document.erb
+++ b/decidim-core/app/views/decidim/application/_document.erb
@@ -1,13 +1,13 @@
 <%# REDESIGN_PENDING: use the card list (small one) once verifications merged (https://github.com/decidim/decidim/pull/9759) %>
-<div id="<%= dom_id(document) %>" class="item-list__content">
-  <%= link_to document.url, target: "_blank", rel: "noopener noreferrer", class: "item-list__title", title: t("decidim.application.document.download") do %>
+<div id="<%= dom_id(document) %>" class="card__list-content">
+  <%= link_to document.url, target: "_blank", rel: "noopener noreferrer", class: "card__list-title", title: t("decidim.application.document.download") do %>
     <%= icon "download-cloud-2-line", class: "inline-block w-4 h-4 mr-2 text-gray fill-current" %>
     <%= attachment_title(document) %>
   <% end %>
   <% if document.description.present? %>
-    <div class="item-list__text"><%= translated_attribute(document.description) %></div>
+    <div class="card__list-text"><%= translated_attribute(document.description) %></div>
   <% end %>
-  <div class="item-list__metadata">
+  <div class="card__list-metadata">
     <span><%= icon "file-text-line" %><%= document.file_type %></span>
     <span><%= icon "scales-2-line" %><%= number_to_human_size(document.file_size) %></span>
   </div>
