--- a/decidim-budgets/app/cells/decidim/budgets/project_list_item/show.erb
+++ b/decidim-budgets/app/cells/decidim/budgets/project_list_item/show.erb
@@ -1,9 +1,9 @@
-<div id="project-<%= model.id %>-item" class="item-list">
-  <div class="item-list__content">
+<div id="project-<%= model.id %>-item" class="card__list">
+  <div class="card__list-content">
     <%= render :project_image %>
     <%= render :project_text %>
   </div>
-  <div class="budget__item-list__project">
+  <div class="budget__card__list-project">
     <%= render :project_data %>
   </div>
 </div>
