--- a/decidim-core/app/views/decidim/shared/filters/_dropdown_label.html.erb
+++ b/decidim-core/app/views/decidim/shared/filters/_dropdown_label.html.erb
@@ -21,16 +21,23 @@
         class: "reset-defaults",
         hidden: "hidden",
         data: { checkboxes_tree: data_checkboxes_tree_id },
-        is_root_check_box: leaf.value.blank?
+        is_root_check_box: is_blank_root
       ),
       leaf.value.to_s,
       nil
     ) %>
+
 <% if item.tree_node? && item.node.present? %>
-  <div id="panel-dropdown-menu-<%= leaf.value %>">
+  <% subitems_content = capture do %>
     <% item.node.each do |subitem| %>
       <%= form.dropdown_label(subitem, method, check_boxes_tree_id:) %>
     <% end %>
-  </div>
-<% end %>
+  <% end %>
 
+  <%# Put the depending elements at the same level if the leaf is blank root (all) %>
+  <% if is_blank_root %>
+    <%= subitems_content %>
+  <% else %>
+    <%= content_tag :div, subitems_content, id: "panel-dropdown-menu-#{leaf.value}" %>
+  <% end %>
+<% end %>
