--- a/decidim-meetings/app/views/decidim/meetings/directory/meetings/index.html.erb
+++ b/decidim-meetings/app/views/decidim/meetings/directory/meetings/index.html.erb
@@ -2,11 +2,13 @@
   display_map: true,
   calendar_url: year_calendar_path,
   search_variable: :title_or_description_cont,
-  display_filter_date: !@forced_past_meetings,
-  display_filter_type: true,
-  display_filter_scopes: true,
-  display_filter_categories: true,
-  display_filter_origin: true,
-  display_filter_space_type: true,
-  display_filter_activity: current_user.present?
+  filter_options: {
+    date: !@forced_past_meetings,
+    type: true,
+    directory_scopes: true,
+    directory_categories: true,
+    origin: true,
+    space_type: true,
+    activity: current_user.present?
+  }
 } %>
