--- a/decidim-meetings/app/views/decidim/meetings/meetings/index.html.erb
+++ b/decidim-meetings/app/views/decidim/meetings/meetings/index.html.erb
@@ -1,29 +1,14 @@
-<%# REDESIGN_PENDING: all filters to false. they require to adapt their contents. Real conditions below %>
-
 <%= render partial: "decidim/meetings/shared/index", locals: {
   display_map: current_component.settings.maps_enabled? && search.result.not_online.exists?,
   calendar_url: year_calendar_meetings_path,
   search_variable: :search_text_cont,
   filter_options: {
-    display_filter_date: true,
-    display_filter_type: true,
-    #display_filter_scopes: true, #directory
-    #display_filter_categories: true, #directory
-    display_filter_origin: true, #directory
-    #display_filter_space_type: true, #directory
-    display_filter_activity: true
+    date: !@forced_past_meetings,
+    type: true,
+    scopes: current_component.has_subscopes?,
+    categories: current_component.categories.any?,
+    origin: component_settings.creation_enabled_for_participants?,
+    space_type: false,
+    activity: current_user.present?
   }
-} %>
-
-<%#= render partial: "decidim/meetings/shared/index", locals: {
-  display_map: current_component.settings.maps_enabled? && search.result.not_online.exists?,
-  calendar_url: year_calendar_meetings_path,
-  search_variable: :search_text_cont,
-  display_filter_date: !@forced_past_meetings,
-  display_filter_type: true,
-  display_filter_scopes: current_component.has_subscopes?,
-  display_filter_categories: current_component.categories.any?,
-  display_filter_origin: component_settings.creation_enabled_for_participants?,
-  display_filter_space_type: false,
-  display_filter_activity: current_user.present?
 } %>
