--- a/decidim-budgets/app/cells/decidim/budgets/project_vote_button/show.erb
+++ b/decidim-budgets/app/cells/decidim/budgets/project_vote_button/show.erb
@@ -2,7 +2,7 @@
       budget_order_line_item_path(model.budget, project_id: model),
       method: vote_button_method,
       remote: true,
-      class: "button button__lg button__transparent-secondary budget-list__action w-full #{vote_button_class}",
+      class: "button button__lg budget-list__action w-full #{vote_button_class} #{resource_added? ? 'button__transparent-secondary' : 'button__secondary'}",
       id: "project-vote-button-#{model.id}",
       data: {
         add: !resource_added?,
