--- a/decidim-core/app/packs/stylesheets/decidim/_redesigned_modal.scss
+++ b/decidim-core/app/packs/stylesheets/decidim/_redesigned_modal.scss
@@ -30,6 +30,6 @@
   }
 
   [data-dialog-actions]{
-    @apply flex justify-between items-center only:[&>*]:ml-auto;
+    @apply flex justify-between items-center mt-10 only:[&>*]:ml-auto;
   }
 }
