--- a/decidim-conferences/app/packs/stylesheets/decidim/conferences/_registration.scss
+++ b/decidim-conferences/app/packs/stylesheets/decidim/conferences/_registration.scss
@@ -10,10 +10,10 @@
   }
 
   &-text{
-    @apply text-sm text-gray-2 space-y-2.5 md:space-y-4;
+    @apply text-sm text-gray-2 space-y-2.5 md:space-y-4 w-full lg:w-1/5 xl:w-2/5;
 
     & > *:last-child{
-      @apply flex items-center gap-1.5 first:[&>*]:flex-none;
+      @apply inline-flex items-center gap-1.5 first:[&>*]:flex-none max-w-full;
     }
   }
 
