remove cursor pointer on hover

--- a/decidim-conferences/app/packs/stylesheets/decidim/conferences/_registration.scss
+++ b/decidim-conferences/app/packs/stylesheets/decidim/conferences/_registration.scss
@@ -30,7 +30,7 @@
   }
 
   &:hover{
-    @apply cursor-pointer border-tertiary;
+    @apply border-tertiary;
   }
 
   &:hover &-text > *:first-child{
