--- a/decidim-budgets/app/cells/decidim/budgets/project_list_item/show.erb
+++ b/decidim-budgets/app/cells/decidim/budgets/project_list_item/show.erb
@@ -1,5 +1,5 @@
-<div id="project-<%= model.id %>-item" class="item-list">
-  <div class="item-list__content">
+<div id="project-<%= model.id %>-item" class="card__list">
+  <div class="card__list__content">
     <%= render :project_text %>
   </div>
   <div class="budget__card__list-project">
