--- a/decidim-participatory_processes/app/packs/stylesheets/participatory_processes.scss
+++ b/decidim-participatory_processes/app/packs/stylesheets/participatory_processes.scss
@@ -127,4 +127,14 @@
       }
     }
   }
+
+  &__block{
+    &-title{
+      @apply flex justify-start items-center gap-4 last:[&>*]:ml-auto;
+    }
+
+    &-grid{
+      @apply grid grid-cols-1 md:grid-cols-3 gap-6 md:gap-16;
+    }
+  }
 }
