floating help default status as tip, not block

--- a/decidim-core/app/views/decidim/shared/_redesigned_floating_help.html.erb
+++ b/decidim-core/app/views/decidim/shared/_redesigned_floating_help.html.erb
@@ -1,4 +1,4 @@
-<div class="is-block" data-floating-help="floating-help-<%= id %>">
+<div class="is-tip" data-floating-help="floating-help-<%= id %>">
   <div id="floating-helper-tip" class="px-2">
     <button class="button button__xs button__text-secondary">
       <%= icon "question-line" %>
