--- a/decidim-budgets/app/views/decidim/budgets/projects/_filters.html.erb
+++ b/decidim-budgets/app/views/decidim/budgets/projects/_filters.html.erb
@@ -1,13 +1,32 @@
 <%= redesigned_filter_form_for filter, url_for, class: "meeting__filter-container", data: { filters: "", component: "accordion" } do |form| %>
+
+  <a href="#" class="mb-8 button button__sm button__text-secondary">
+    <%= icon "arrow-left-line", class: 'inline-block' %>
+    <span>Volver a presupuestos</span>
+  </a>
+
   <div class="filter-search filter-container">
     <%= form.search_field :search_text_cont, label: false, class: "input-group-field", placeholder: t(".search"), title: t(".search"), "aria-label": t(".search"), data: { disable_dynamic_change: true } %>
     <button type="submit" aria-controls="meetings" aria_label="<%= t("decidim.meetings.meetings.filters.search") %>">
-      <%= icon "search-line"  %>
+      <%= icon "search-line" %>
     </button>
   </div>
 
   <%# REDESIGN_PENDING: nested filters are mocked %>
+
+  <% filters_budgets = [ "Distrito de Ciutat Vella", "Distrito de Sants-Montjuic", "Distrito del Eixample", "Distrito de Sarrià-Sant Gervasi", "Distrito de Gràcia", "Distrito de Poble Nou"] %>
   <div class="filter-container">
+    <div class="budget__filter">
+      <span class="budget__filter-title">
+        <%= t("decidim.components.budgets.name") %>
+      </span>
+      <% filters_budgets.each do | budget | %>
+        <div class="budget__filter__container">
+          <input class="peer" type="radio" id="<%= budget %>" name="<%= t("decidim.components.budgets.name") %>" value="<%= budget %>">
+          <label class="peer-checked:text-secondary" for="<%= budget %>"><%= budget %></label>
+        </div>
+      <% end %>
+    </div>
     <button data-controls="panel-scope" data-open="true">
       <%= icon "arrow-down-s-line" %>
       <%= icon "arrow-up-s-line" %>
