--- a/decidim-core/app/views/decidim/shared/filters/_redesigned_check_boxes_tree.html.erb
+++ b/decidim-core/app/views/decidim/shared/filters/_redesigned_check_boxes_tree.html.erb
@@ -1,11 +1,11 @@
 <div class="filter-container">
-  <button data-controls="panel-scope-<%= id %>" data-open="true">
+  <button data-controls="panel-dropdown-menu-<%= id %>" data-open="true">
     <%= icon "arrow-down-s-line" %>
     <%= icon "arrow-up-s-line" %>
     <span><%= t(id, scope: label_scope) %></span>
   </button>
 
-  <div id="panel-scope-<%= id %>">
+  <div id="panel-dropdown-menu-<%= id %>">
     <% data_checkboxes_tree_id = "#{method}-#{id}-#{collection.leaf.value}" %>
     <% is_root_check_box = collection.leaf.value == "" %>
     <% if is_root_check_box %>
