--- a/decidim-core/app/views/decidim/shared/filters/_dropdown_label.html.erb
+++ b/decidim-core/app/views/decidim/shared/filters/_dropdown_label.html.erb
@@ -6,7 +6,7 @@
   <div class="filter">
     <%= leaf.label %>
     <% if !is_blank_root && item.tree_node? && item.node.present? %>
-      <button data-controls="panel-dropdown-menu-<%= leaf.value %>" onclick="event.preventDefault()">
+      <button data-controls="panel-dropdown-menu-<%= data_checkboxes_tree_id %>" onclick="event.preventDefault()">
         <%= icon "arrow-down-s-fill" %>
         <%= icon "arrow-up-s-fill" %>
       </button>
@@ -39,6 +39,6 @@
   <% if is_blank_root %>
     <%= subitems_content %>
   <% else %>
-    <%= content_tag :div, subitems_content, id: "panel-dropdown-menu-#{leaf.value}" %>
+    <%= content_tag :div, subitems_content, id: "panel-dropdown-menu-#{data_checkboxes_tree_id}" %>
   <% end %>
 <% end %>
