Restore service worker in redesigned layout

--- a/decidim-core/app/views/layouts/decidim/_redesigned_decidim_javascript.html.erb
+++ b/decidim-core/app/views/layouts/decidim/_redesigned_decidim_javascript.html.erb
@@ -1,5 +1,8 @@
 <%= javascript_pack_tag "redesigned_decidim_core", defer: false %>
 <%= render partial: "layouts/decidim/redesigned_js_configuration" %>
+<% if Decidim.service_worker_enabled %>
+  <%= javascript_pack_tag "decidim_sw", defer: false %>
+<% end %>
 
 <%= content_for :js_content %>
 
