--- a/decidim-meetings/app/views/decidim/meetings/shared/_meetings.html.erb
+++ b/decidim-meetings/app/views/decidim/meetings/shared/_meetings.html.erb
@@ -5,7 +5,7 @@
 
   <div id="meetings" class="meeting-list__container">
     <% meetings.each do |meeting| %>
-      <%= cell "decidim/meetings/meeting_l", meeting, link_whole_card: true, title_tag: :h2 %>
+      <%= cell "decidim/meetings/meeting_l", meeting, link_whole_card: true, turbo_frame: "meeting_frame" %>
     <% end %>
   </div>
   <%= decidim_paginate meetings, order_start_time: params[:order_start_time], scope_id: params[:scope_id] %>
