--- a/decidim-comments/app/cells/decidim/comments/comment_form/show.erb
+++ b/decidim-comments/app/cells/decidim/comments/comment_form/show.erb
@@ -1,5 +1,6 @@
 <%= form_for(form_object, url: decidim_comments.comments_path(order: order), method: :post, remote: true, html: { id: form_id }) do |form| %>
   <%= form.hidden_field :commentable_gid, id: nil %>
+  <%= form.hidden_field :alignment, id: nil, class: "alignment-input" %>
   <%= comment_as_for(form) %>
   <div class="form__wrapper gap-2">
     <label for="<%= add_comment_id %>">
