Fix javascript integration

--- a/decidim-comments/app/views/decidim/comments/comments/index.js.erb
+++ b/decidim-comments/app/views/decidim/comments/comments/index.js.erb
@@ -22,6 +22,6 @@
 
   // Update the comments count
   $(".comments-count", $comments).text(<%== t("decidim.components.comments.title", count: @comments_count).to_json %>);
-  Decidim.Accordions.init();
-  Decidim.Dropdowns.init();
+  window.Decidim.Accordions.init();
+  window.Decidim.Dropdowns.init();
 }());
