--- a/decidim-comments/app/cells/decidim/comments/comment/show.erb
+++ b/decidim-comments/app/cells/decidim/comments/comment/show.erb
@@ -39,10 +39,11 @@
     <% if has_replies_in_children? %>
       <% if replies.length >= 1 %>
         <div data-component="accordion">
-          <div class="block text-center relative top-4 z-[1] -mt-10">
-            <button id="panel-trigger-<%= model.id %>-replies" class="button button__sm button__text-secondary bg-background-2" data-controls="panel-<%= model.id %>-replies">
-              <span><%= replies.length %> respostes</span>
+          <div class="block text-center relative top-4 z-[1] -mt-8">
+            <button id="panel-trigger-<%= model.id %>-replies" class="button button__sm button__text-secondary bg-background px-2" data-controls="panel-<%= model.id %>-replies">
+              <span class="font-normal"><%= replies.length %> respostes</span>
               <%= icon "arrow-down-s-line" %>
+              <%= icon "arrow-up-s-line" %>
             </button>
           </div>
           <div class="comment-reply" id="panel-<%= model.id %>-replies">
