keep modal focus

--- a/decidim-core/app/packs/stylesheets/decidim/_redesigned_modal.scss
+++ b/decidim-core/app/packs/stylesheets/decidim/_redesigned_modal.scss
@@ -14,7 +14,7 @@
   }
 
   [data-dialog-closable]{
-    @apply absolute top-4 right-4 text-2xl text-secondary outline-none;
+    @apply absolute top-4 right-4 text-2xl text-secondary;
   }
 
   [data-dialog-container]{
