--- a/decidim-core/app/views/decidim/shared/_redesigned_share_modal.html.erb
+++ b/decidim-core/app/views/decidim/shared/_redesigned_share_modal.html.erb
@@ -12,10 +12,12 @@
     <div class="share-modal__input">
       <input id="urlShareLink" type="text" title="<%= t("share_link" , scope: "decidim.shared.share_modal") %>" value="<%= decidim_meta_url %>" readonly>
       <button type="button"
+        class="button button__sm button__text-secondary"
         data-clipboard-copy="#urlShareLink"
         data-clipboard-copy-label="<%= t("copy_share_link_copied", scope: "decidim.shared.share_modal") %>"
         data-clipboard-copy-message="<%= t("copy_share_link_message", scope: "decidim.shared.share_modal") %>"
         title="<%= t("copy_share_link_clarification", scope: "decidim.shared.share_modal") %>">
+        <span><%= t("copy_share_link", scope: "decidim.shared.share_modal") %></span>
         <%= icon "file-copy-line" %>
       </button>
     </div>
