Apply review recommendations

--- a/decidim-initiatives/app/views/decidim/initiatives/create_initiative/fill_data.html.erb
+++ b/decidim-initiatives/app/views/decidim/initiatives/create_initiative/fill_data.html.erb
@@ -34,7 +34,7 @@
             </div>
 
             <div class="field">
-              <%= text_editor_for(f, :description, lines: 8, toolbar: :basic ) %>
+              <%= text_editor_for(f, :description, lines: 8, toolbar: :full ) %>
             </div>
 
             <% signature_type_options = signature_type_options(f.object) %>
