--- a/decidim-initiatives/app/views/decidim/initiatives/create_initiative/previous_form.html.erb
+++ b/decidim-initiatives/app/views/decidim/initiatives/create_initiative/previous_form.html.erb
@@ -27,7 +27,7 @@
           </div>
 
           <div class="field">
-            <%= text_editor_for(f, :description, lines: 8, toolbar: :basic) %>
+            <%= text_editor_for(f, :description, lines: 8, toolbar: :full) %>
           </div>
 
           <div class="actions">
