Move authorizations modal to a cell

--- a/decidim-core/app/views/decidim/authorization_modals/show.html.erb
+++ b/decidim-core/app/views/decidim/authorization_modals/show.html.erb
@@ -1,1 +1,5 @@
-<%= render partial: redesigned_layout("decidim/authorization_modals/content") %>
+<% if redesign_enabled? %>
+  <%= cell "decidim/authorization_modal", authorizations %>
+<% else %>
+  <%= render partial: "decidim/authorization_modals/content" %>
+<% end %>
